Mejorado filtro de archivos y bugs

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,6 +7,7 @@
 	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archiv",
 	"ARCHIVED_STUDENTS": "Archivierte Schüler",
+	"ARCHIVE_DAY": "Archivsatz",
 	"ARCHIVE_STUDENT": "Student archivieren",
 	"AVATAR": "Profilbild",
 	"BACK": "Zurück",
@@ -53,6 +54,7 @@
 	},
 	"DAY": {
 		"ADD": "Datensatz hinzufügen",
+		"ARCHIVE": "Archivdatensatz",
 		"CREATION_SUBTITLE": "Mit diesen Aufzeichnungen können Sie jeden Schüler täglich verfolgen",
 		"DELETE": "Registrierung löschen",
 		"DUPLICATE": "Datensatz duplizieren",
@@ -117,7 +119,8 @@
 		"PHONES": "Telefone",
 		"PICTURE": "Bild",
 		"SELECT_DATE": "Schnelle Termine",
-		"SHOW_ARCHIVED": "Archivierte Schülerdatensätze anzeigen",
+		"SHOW_ARCHIVED": "Archivierte Datensätze anzeigen",
+		"SHOW_FAVORITES": "Lieblingsdatensätze anzeigen",
 		"SINCE": "Von",
 		"STUDENT": "Student",
 		"STUDENT_LIST": "Liste der Studierenden",
@@ -188,6 +191,9 @@
 		"CLASSROOM_DELETE_2": "Schüler, die sich in diesem Klassenzimmer befinden, hören auf zu sein",
 		"CLASSROOM_DELETE_OK": "Das Klassenzimmer wurde erfolgreich gelöscht",
 		"CLASSROOM_UPDATE_OK": "Modifiziertes Klassenzimmer",
+		"DAY_ARCHIVE": "Sind Sie sicher, dass Sie diesen Datensatz archivieren wollen?",
+		"DAY_ARCHIVED_OK": "Datensatz korrekt abgelegt",
+		"DAY_ARCHIVE_2": "Dadurch wird er lediglich aus der Liste der Datensätze ausgeblendet, aber nicht gelöscht.",
 		"DAY_CREATE_OK": "Ein neuer Datensatz wurde erstellt",
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Um einen neuen Datensatz zu erstellen, muss mindestens ein Schüler in Ihrer Schule eingeschrieben sein.",
 		"DAY_DELETE": "Möchten Sie diesen Datensatz wirklich löschen?",
@@ -195,12 +201,17 @@
 		"DAY_LIST_EMPTY": "Es wird kein Datensatz erstellt. Sie können eine neue erstellen, indem Sie auf die große Schaltfläche unten klicken.",
 		"DAY_NOT_EXIST": "Dieser Datensatz existiert nicht",
 		"DAY_STUDENT_ARCHIVED": "Sie können keine Aufzeichnungen eines archivierten Schülers erstellen. Zuerst entladen",
+		"DAY_UNARCHIVE": "Sind Sie sicher, dass Sie diesen Datensatz unarchivieren wollen?",
+		"DAY_UNARCHIVE_2": "Wenn dies der Fall ist, wird er in der Liste der Datensätze wieder angezeigt.",
+		"DAY_UNARCHIVE_OK": "Datensatz erfolgreich unarchiviert",
 		"DAY_UPDATE_OK": "Geänderter Datensatz",
 		"FORGOT_PASSWORD": "Haben Sie Ihr Passwort vergessen?",
 		"FORGOT_PASSWORD_EMAIL": "Prüfen Sie Ihre E-Mail. Wir haben Ihnen eine E-Mail mit Anweisungen zum Zurücksetzen Ihres Passworts gesendet.",
 		"FORGOT_PASSWORD_TITLE": "Geben Sie Ihre E-Mail-Adresse ein, um Ihr Passwort zurückzusetzen. Wir werden Ihnen eine E-Mail mit Anweisungen senden.",
 		"LOGOUT": "Möchten Sie sich abmelden?",
 		"LOGOUT_CONFIRM": "Dann hoffen wir, dass Sie bald wiederkommen :)",
+		"MARK_DAY_FAV": "Markieren Sie die Aufzeichnung als Favorit",
+		"MARK_STUDENT_FAV": "Schüler als Favorit markieren",
 		"NOTHING_HERE": "Upps! Hier nichts",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Noch kein Benutzer?",
@@ -297,6 +308,7 @@
 		"LIGHT_THEME": "Klares Thema"
 	},
 	"UNARCHIVE": "Archiv aufheben",
+	"UNARCHIVE_DAY": "Datensatz nicht archivieren",
 	"UNARCHIVE_STUDENT": "Student aus dem Archiv entfernen",
 	"YEAR": "Jahr",
 	"YEARS": "Jahre alt"
