--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
 	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archive",
 	"ARCHIVED_STUDENTS": "Archived Students",
+	"ARCHIVE_DAY": "Archive record",
 	"ARCHIVE_STUDENT": "Archive student",
 	"AVATAR": "Profile image",
 	"BACK": "Return",
@@ -53,6 +54,7 @@
 	},
 	"DAY": {
 		"ADD": "Add record",
+		"ARCHIVE": "Archive record",
 		"CREATION_SUBTITLE": "With these records you can track each student daily",
 		"DELETE": "Clear log",
 		"DUPLICATE": "Duplicate record",
@@ -117,7 +119,8 @@
 		"PHONES": "Phones",
 		"PICTURE": "Image",
 		"SELECT_DATE": "Quick dates",
-		"SHOW_ARCHIVED": "Show Archived Student Records",
+		"SHOW_ARCHIVED": "Show archived records",
+		"SHOW_FAVORITES": "Show favorite records",
 		"SINCE": "Since",
 		"STUDENT": "Student",
 		"STUDENT_LIST": "Student List",
@@ -188,6 +191,9 @@
 		"CLASSROOM_DELETE_2": "Students grouped in this classroom will cease to be",
 		"CLASSROOM_DELETE_OK": "Classroom has been deleted successfully",
 		"CLASSROOM_UPDATE_OK": "Modified classroom",
+		"DAY_ARCHIVE": "Are you sure you want to archive this record?",
+		"DAY_ARCHIVED_OK": "Record filed correctly",
+		"DAY_ARCHIVE_2": "Doing so will simply hide it from the list of records, but it will not be deleted.",
 		"DAY_CREATE_OK": "A new record has been created",
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "To create a new record you need to have at least one student enrolled in your school.",
 		"DAY_DELETE": "Are you sure you want to delete this record?",
@@ -195,12 +201,17 @@
 		"DAY_LIST_EMPTY": "No record is created. You can create a new one by clicking on the large button below.",
 		"DAY_NOT_EXIST": "This record does not exist",
 		"DAY_STUDENT_ARCHIVED": "You cannot create records of an archived student. Unarchive it first",
+		"DAY_UNARCHIVE": "Are you sure you want to unarchive this record?",
+		"DAY_UNARCHIVE_2": "If it does so, it will reappear in the list of records.",
+		"DAY_UNARCHIVE_OK": "Record successfully unarchived",
 		"DAY_UPDATE_OK": "Modified Record",
 		"FORGOT_PASSWORD": "Forgot your password?",
 		"FORGOT_PASSWORD_EMAIL": "Check your email. We have sent you an email with instructions on how to reset your password.",
 		"FORGOT_PASSWORD_TITLE": "Enter your email to reset your password. We will send you an email with instructions.",
 		"LOGOUT": "Do you want to log out?",
 		"LOGOUT_CONFIRM": "If you do we hope you come back soon :)",
+		"MARK_DAY_FAV": "Mark record as favorite",
+		"MARK_STUDENT_FAV": "Mark student as favorite",
 		"NOTHING_HERE": "Upps! There is nothing here",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Not a user yet?",
@@ -297,6 +308,7 @@
 		"LIGHT_THEME": "Clear topic"
 	},
 	"UNARCHIVE": "Unarchive",
+	"UNARCHIVE_DAY": "Unarchive record",
 	"UNARCHIVE_STUDENT": "Unarchive student",
 	"YEAR": "year",
 	"YEARS": "years"
