--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,6 +7,7 @@
 	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archivar",
 	"ARCHIVED_STUDENTS": "Alumnos archivados",
+	"ARCHIVE_DAY": "Archivar registro",
 	"ARCHIVE_STUDENT": "Archivar alumno",
 	"AVATAR": "Imagen de perfil",
 	"BACK": "Volver",
@@ -53,6 +54,7 @@
 	},
 	"DAY": {
 		"ADD": "Añadir registro",
+		"ARCHIVE": "Archivar registro",
 		"CREATION_SUBTITLE": "Con estos registros podrás hacer un seguimiento diario de cada alumno",
 		"DELETE": "Borrar registro",
 		"DUPLICATE": "Duplicar registro",
@@ -117,7 +119,8 @@
 		"PHONES": "Teléfonos",
 		"PICTURE": "Imagen",
 		"SELECT_DATE": "Fechas rápidas",
-		"SHOW_ARCHIVED": "Mostrar registros de alumnos archivados",
+		"SHOW_ARCHIVED": "Mostrar registros archivados",
+		"SHOW_FAVORITES": "Mostrar registros favoritos",
 		"SINCE": "Desde",
 		"STUDENT": "Alumno",
 		"STUDENT_LIST": "Lista de alumnos",
@@ -188,6 +191,9 @@
 		"CLASSROOM_DELETE_2": "Los alumnos agrupados en este aula dejarán de estarlo",
 		"CLASSROOM_DELETE_OK": "Se ha borrado correctamente el aula",
 		"CLASSROOM_UPDATE_OK": "Aula modificada",
+		"DAY_ARCHIVE": "¿Estás seguro que quieres archivar este registro?",
+		"DAY_ARCHIVED_OK": "Registro archivado correctamente",
+		"DAY_ARCHIVE_2": "Si lo hace simplemente se ocultará de la lista de registros, pero no se borrará",
 		"DAY_CREATE_OK": "Se ha creado un nuevo registro",
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Para crear un nuevo registro necesitas tener al menos un alumno inscrito en tu escuela",
 		"DAY_DELETE": "¿Estás seguro que quieres borrar este registro?",
@@ -195,12 +201,17 @@
 		"DAY_LIST_EMPTY": "No hay ningún registro creado. Puedes crear uno nuevo pulsando en el botón grande de abajo.",
 		"DAY_NOT_EXIST": "Este registro no existe",
 		"DAY_STUDENT_ARCHIVED": "No puedes crear registros de un alumno archivado. Desarchívalo primero",
+		"DAY_UNARCHIVE": "¿Estás seguro que quieres desarchivar este registro?",
+		"DAY_UNARCHIVE_2": "Si lo hace volverá aparecer en la lista de registros",
+		"DAY_UNARCHIVE_OK": "Registro desarchivado correctamente",
 		"DAY_UPDATE_OK": "Registro modificado",
 		"FORGOT_PASSWORD": "¿Olvidaste tu contraseña?",
 		"FORGOT_PASSWORD_EMAIL": "Revisa tu correo. Te hemos enviado un email con las instrucciones para restaurar la contraseña.",
 		"FORGOT_PASSWORD_TITLE": "Introduce tu email para restaurar la contraseña. Te enviaremos un correo con instrucciones.",
 		"LOGOUT": "¿Quieres cerrar la sesión?",
 		"LOGOUT_CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
+		"MARK_DAY_FAV": "Marcar registro como favorito",
+		"MARK_STUDENT_FAV": "Marcar alumno como favorito",
 		"NOTHING_HERE": "Upps! Aquí no hay nada",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "¿Aún no eres usuario?",
@@ -297,6 +308,7 @@
 		"LIGHT_THEME": "Tema claro"
 	},
 	"UNARCHIVE": "Desarchivar",
+	"UNARCHIVE_DAY": "Desarchivar registro",
 	"UNARCHIVE_STUDENT": "Desarchivar alumno",
 	"YEAR": "año",
 	"YEARS": "años"
