--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,6 +7,7 @@
 	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archive",
 	"ARCHIVED_STUDENTS": "Étudiants archivés",
+	"ARCHIVE_DAY": "Dossier d'archives",
 	"ARCHIVE_STUDENT": "Étudiant aux archives",
 	"AVATAR": "Image de profil",
 	"BACK": "Revenir",
@@ -53,6 +54,7 @@
 	},
 	"DAY": {
 		"ADD": "Ajouter un enregistrement",
+		"ARCHIVE": "Enregistrement d’archives",
 		"CREATION_SUBTITLE": "Avec ces enregistrements, vous pouvez suivre chaque élève quotidiennement",
 		"DELETE": "Supprimer l'inscription",
 		"DUPLICATE": "Enregistrement en double",
@@ -117,7 +119,8 @@
 		"PHONES": "Téléphones",
 		"PICTURE": "Image",
 		"SELECT_DATE": "Dates rapides",
-		"SHOW_ARCHIVED": "Afficher les dossiers étudiants archivés",
+		"SHOW_ARCHIVED": "Afficher les enregistrements archivés",
+		"SHOW_FAVORITES": "Afficher les disques préférés",
 		"SINCE": "à partir de",
 		"STUDENT": "Étudiant",
 		"STUDENT_LIST": "Liste des étudiants",
@@ -188,6 +191,9 @@
 		"CLASSROOM_DELETE_2": "Les élèves regroupés dans cette classe cesseront d'être",
 		"CLASSROOM_DELETE_OK": "La salle de classe a été supprimée avec succès",
 		"CLASSROOM_UPDATE_OK": "Salle de classe modifiée",
+		"DAY_ARCHIVE": "Êtes-vous sûr de vouloir archiver cet enregistrement ?",
+		"DAY_ARCHIVED_OK": "Dossier classé correctement",
+		"DAY_ARCHIVE_2": "Ce faisant, il sera simplement masqué de la liste des enregistrements, mais il ne sera pas supprimé.",
 		"DAY_CREATE_OK": "Un nouveau record a été créé",
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Pour créer un nouvel enregistrement, vous devez avoir au moins un élève inscrit dans votre école.",
 		"DAY_DELETE": "Voulez-vous vraiment supprimer cet enregistrement?",
@@ -195,12 +201,17 @@
 		"DAY_LIST_EMPTY": "Aucun enregistrement n’est créé. Vous pouvez en créer un nouveau en cliquant sur le grand bouton ci-dessous.",
 		"DAY_NOT_EXIST": "Cet enregistrement n'existe pas",
 		"DAY_STUDENT_ARCHIVED": "Vous ne pouvez pas créer d'enregistrements d'un étudiant archivé. Déchargez-le d'abord",
+		"DAY_UNARCHIVE": "Êtes-vous sûr de vouloir désarchiver cet enregistrement ?",
+		"DAY_UNARCHIVE_2": "Si c'est le cas, il réapparaîtra dans la liste des enregistrements.",
+		"DAY_UNARCHIVE_OK": "Enregistrement désarchivé avec succès",
 		"DAY_UPDATE_OK": "Enregistrement modifié",
 		"FORGOT_PASSWORD": "Vous avez oublié votre mot de passe ?",
 		"FORGOT_PASSWORD_EMAIL": "Vérifiez votre courrier électronique. Nous vous avons envoyé un courriel contenant les instructions pour réinitialiser votre mot de passe.",
 		"FORGOT_PASSWORD_TITLE": "Saisissez votre adresse électronique pour réinitialiser votre mot de passe. Nous vous enverrons un courriel avec des instructions.",
 		"LOGOUT": "Voulez-vous vous déconnecter?",
 		"LOGOUT_CONFIRM": "Si vous le faites, nous espérons que vous reviendrez bientôt :)",
+		"MARK_DAY_FAV": "Marquer l'enregistrement comme favori",
+		"MARK_STUDENT_FAV": "Marquer l'élève comme favori",
 		"NOTHING_HERE": "Upps! Rien ici",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Pas encore utilisateur?",
@@ -297,6 +308,7 @@
 		"LIGHT_THEME": "Sujet clair"
 	},
 	"UNARCHIVE": "Désarchiver",
+	"UNARCHIVE_DAY": "Dossier non archivé",
 	"UNARCHIVE_STUDENT": "Étudiant désarchivé",
 	"YEAR": "année",
 	"YEARS": "ans"
