--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -7,6 +7,7 @@
 	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "File",
 	"ARCHIVED_STUDENTS": "Studenti archiviati",
+	"ARCHIVE_DAY": "Archivio record",
 	"ARCHIVE_STUDENT": "Studente d'archivio",
 	"AVATAR": "Immagine del profilo",
 	"BACK": "Ritorno",
@@ -53,6 +54,7 @@
 	},
 	"DAY": {
 		"ADD": "Aggiungi record",
+		"ARCHIVE": "Record di archivio",
 		"CREATION_SUBTITLE": "Con questi record puoi monitorare ogni studente ogni giorno",
 		"DELETE": "Elimina record",
 		"DUPLICATE": "Record duplicato",
@@ -117,7 +119,8 @@
 		"PHONES": "Ttelefoni",
 		"PICTURE": "Immagine",
 		"SELECT_DATE": "Date veloci",
-		"SHOW_ARCHIVED": "Mostra record studenti archiviati",
+		"SHOW_ARCHIVED": "Mostra record archiviati",
+		"SHOW_FAVORITES": "Mostra i record preferiti",
 		"SINCE": "da",
 		"STUDENT": "Studente",
 		"STUDENT_LIST": "Elenco degli studenti",
@@ -188,6 +191,9 @@
 		"CLASSROOM_DELETE_2": "Gli studenti raggruppati in questa classe cesseranno di esserlo",
 		"CLASSROOM_DELETE_OK": "Classroom è stata eliminata correttamente",
 		"CLASSROOM_UPDATE_OK": "Aula modificata",
+		"DAY_ARCHIVE": "Sei sicuro di voler archiviare questo record?",
+		"DAY_ARCHIVED_OK": "Registrazione archiviata correttamente",
+		"DAY_ARCHIVE_2": "Facendo questo, lo nasconderà semplicemente dalla lista dei record, ma non lo cancellerà.",
 		"DAY_CREATE_OK": "È stato creato un nuovo record",
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Per creare un nuovo record devi avere almeno uno studente iscritto alla tua scuola.",
 		"DAY_DELETE": "Sei sicuro di voler eliminare questo record?",
@@ -195,12 +201,17 @@
 		"DAY_LIST_EMPTY": "Non viene creato alcun record. Puoi crearne uno nuovo cliccando sul grande pulsante qui sotto.",
 		"DAY_NOT_EXIST": "Questo record non esiste",
 		"DAY_STUDENT_ARCHIVED": "Non è possibile creare record di uno studente archiviato. Scaricalo prima",
+		"DAY_UNARCHIVE": "Sei sicuro di voler disarchiviare questo disco?",
+		"DAY_UNARCHIVE_2": "Se lo fa, riapparirà nella lista dei record.",
+		"DAY_UNARCHIVE_OK": "Record disarchiviato con successo",
 		"DAY_UPDATE_OK": "Record modificato",
 		"FORGOT_PASSWORD": "Hai dimenticato la tua password?",
 		"FORGOT_PASSWORD_EMAIL": "Controlla la tua e-mail. Ti abbiamo inviato un'e-mail con le istruzioni su come reimpostare la tua password.",
 		"FORGOT_PASSWORD_TITLE": "Inserisci il tuo indirizzo e-mail per reimpostare la tua password. Ti invieremo un'e-mail con le istruzioni.",
 		"LOGOUT": "Vuoi uscire?",
 		"LOGOUT_CONFIRM": "Se lo fai, speriamo che torni presto :)",
+		"MARK_DAY_FAV": "Contrassegna il record come preferito",
+		"MARK_STUDENT_FAV": "Contrassegna lo studente come preferito",
 		"NOTHING_HERE": "Upps! Niente qui",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Non sei ancora un utente?",
@@ -297,6 +308,7 @@
 		"LIGHT_THEME": "Cancella argomento"
 	},
 	"UNARCHIVE": "Unarchiving",
+	"UNARCHIVE_DAY": "Disarchivia il record",
 	"UNARCHIVE_STUDENT": "Studente non archiviato",
 	"YEAR": "anno",
 	"YEARS": "anni"
