layout day card

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -220,7 +220,7 @@
 		"SERVICE_NOT_AVAILABLE": "Dieser Service wird in Kürze verfügbar sein",
 		"STUDENT_ARCHIVE": "Möchten Sie diesen Studenten wirklich archivieren?",
 		"STUDENT_ARCHIVED_OK": "Student erfolgreich abgelegt",
-		"STUDENT_ARCHIVE_2": "Wenn Sie dies tun, wird es nicht in den Schülerlisten angezeigt und Ihre Unterlagen werden ausgeblendet. Sie können mit diesem Schüler auch keine Datensätze erstellen",
+		"STUDENT_ARCHIVE_2": "Wenn Sie dies tun, wird es nicht in den Schülerlisten angezeigt und Ihre Unterlagen werden ausgeblendet",
 		"STUDENT_CREATE_OK": "Ein neuer Schüler hat sich für den Unterricht angemeldet",
 		"STUDENT_DELETE": "Möchten Sie diesen Schüler wirklich löschen?",
 		"STUDENT_DELETE_2": "Beachten Sie, dass die mit diesem Schüler verknüpften täglichen Aufzeichnungen ebenfalls gelöscht werden. Wenn Sie dies nicht möchten, denken Sie daran, dass Sie es jederzeit archivieren können",
@@ -228,7 +228,7 @@
 		"STUDENT_LIST_EMPTY": "Sie haben keine Schüler, die an Ihrer Schule eingeschrieben sind. Sie können es hinzufügen, indem Sie auf die große Schaltfläche unten klicken, die wie eine gebratene Kartoffel schlägt.",
 		"STUDENT_UNARCHIVE": "Möchten Sie diesen Studenten wirklich aus dem Archiv entfernen?",
 		"STUDENT_UNARCHIVED_OK": "Der Student wurde korrekt aus dem Archiv entfernt",
-		"STUDENT_UNARCHIVE_2": "Wenn Sie dies tun, werden die Schülerlisten erneut angezeigt und ihre Aufzeichnungen werden angezeigt. Sie können auch Datensätze neu erstellen, die diesem Schüler zugeordnet sind.",
+		"STUDENT_UNARCHIVE_2": "Wenn Sie dies tun, werden die Schülerlisten erneut angezeigt und ihre Aufzeichnungen werden angezeigt. ",
 		"STUDENT_UPDATE_OK": "Der Student wurde geändert",
 		"SUBJECT_CREATE_OK": "Der Betreff wurde korrekt erstellt",
 		"SUBJECT_DELETE": "Möchten Sie diesen Betreff wirklich löschen?",
