--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -220,7 +220,7 @@
 		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
 		"STUDENT_ARCHIVE": "Are you sure you want to archive this student?",
 		"STUDENT_ARCHIVED_OK": "Student archived correctly",
-		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student listings and your records will be hidden. Nor can you create records associated with this student",
+		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student listings and your records will be hidden",
 		"STUDENT_CREATE_OK": "A new student has signed up for class",
 		"STUDENT_DELETE": "Are you sure you want to delete this student?",
 		"STUDENT_DELETE_2": "Note that the daily records associated with this student will also be deleted. If this is not what you want, remember that you can always archive it",
@@ -228,7 +228,7 @@
 		"STUDENT_LIST_EMPTY": "You don't have any students enrolled in your school. You can add it by clicking on the large button below that beats like a fried potato.",
 		"STUDENT_UNARCHIVE": "Are you sure you want to unarchive this student?",
 		"STUDENT_UNARCHIVED_OK": "Student unarchived correctly",
-		"STUDENT_UNARCHIVE_2": "Doing so will reappear in student listings and their records will be displayed. You can also re-create records associated with this student.",
+		"STUDENT_UNARCHIVE_2": "Doing so will reappear in student listings and their records will be displayed.",
 		"STUDENT_UPDATE_OK": "The student has been modified",
 		"SUBJECT_CREATE_OK": "The subject has been created correctly",
 		"SUBJECT_DELETE": "Are you sure you want to delete this subject?",
