--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -220,7 +220,7 @@
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_ARCHIVE": "¿Estás seguro que quieres archivar este alumno?",
 		"STUDENT_ARCHIVED_OK": "Alumno archivado correctamente",
-		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en los listados de alumnos y se ocultarán sus registros. Tampoco podrá crear registros asociados a este alumno",
+		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en los listados de alumnos y se ocultarán sus registros",
 		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
 		"STUDENT_DELETE_2": "Ten en cuenta que los registros diarios asociados a este alumno también se borrarán. Si esto no es lo que quieres, recuerda que siempre puedes archivarlo",
@@ -228,7 +228,7 @@
 		"STUDENT_LIST_EMPTY": "No tienes ningún alumno inscrito en tu escuela. Puedes añadirlo pulsando en el botón grande de abajo que palpita como una patata frita.",
 		"STUDENT_UNARCHIVE": "¿Estás seguro que quieres desarchivar este alumno?",
 		"STUDENT_UNARCHIVED_OK": "Alumno desarchivado correctamente",
-		"STUDENT_UNARCHIVE_2": "Si lo hace volverá a aparecer en los listados de alumnos y se mostrarán sus registros. También podrá volver a crear registros asociados a este alumno.",
+		"STUDENT_UNARCHIVE_2": "Si lo hace volverá a aparecer en los listados de alumnos y se mostrarán sus registros.",
 		"STUDENT_UPDATE_OK": "Se ha modificado el alumno",
 		"SUBJECT_CREATE_OK": "Se ha creado la asignatura correctamente",
 		"SUBJECT_DELETE": "¿Estás seguro que quieres borrar esta asignatura?",
