--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -220,7 +220,7 @@
 		"SERVICE_NOT_AVAILABLE": "Questo servizio sarà presto disponibile",
 		"STUDENT_ARCHIVE": "Sei sicuro di voler archiviare questo studente?",
 		"STUDENT_ARCHIVED_OK": "Studente archiviato correttamente",
-		"STUDENT_ARCHIVE_2": "In tal caso, non comparirà negli elenchi degli studenti e i tuoi record saranno nascosti. Né è possibile creare record associati a questo studente",
+		"STUDENT_ARCHIVE_2": "In tal caso, non comparirà negli elenchi degli studenti e i tuoi record saranno nascosti.",
 		"STUDENT_CREATE_OK": "Un nuovo studente si è iscritto per la lezione",
 		"STUDENT_DELETE": "Sei sicuro di voler eliminare questo studente?",
 		"STUDENT_DELETE_2": "Si noti che anche i record giornalieri associati a questo studente verranno eliminati. Se questo non è ciò che desideri, ricorda che puoi sempre archiviarlo",
@@ -228,7 +228,7 @@
 		"STUDENT_LIST_EMPTY": "Non hai studenti iscritti alla tua scuola. Puoi aggiungerlo cliccando sul grande pulsante qui sotto che batte come una patata fritta.",
 		"STUDENT_UNARCHIVE": "Sei sicuro di voler annullare l'archiviazione di questo studente?",
 		"STUDENT_UNARCHIVED_OK": "Studente non archiviato correttamente",
-		"STUDENT_UNARCHIVE_2": "In questo modo riapparirà nelle liste degli studenti e verranno visualizzati i loro record. Puoi anche ricreare i record associati a questo studente.",
+		"STUDENT_UNARCHIVE_2": "In questo modo riapparirà nelle liste degli studenti e verranno visualizzati i loro record.",
 		"STUDENT_UPDATE_OK": "Lo studente è stato modificato",
 		"SUBJECT_CREATE_OK": "L'argomento è stato creato correttamente",
 		"SUBJECT_DELETE": "Sei sicuro di voler eliminare questo argomento?",
