--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -60,6 +60,7 @@
 		"DUPLICATE": "Enregistrement en double",
 		"EDIT": "Modifier l'enregistrement"
 	},
+	"DAY_ARCHIVED": "Journal archivé",
 	"DELETE": "Supprimer",
 	"DELETE_CLASSROOM": "Supprimer la classe",
 	"DELETE_ELEMENT": "Supprimer l'élément",
@@ -202,8 +203,8 @@
 		"DAY_NOT_EXIST": "Cet enregistrement n'existe pas",
 		"DAY_STUDENT_ARCHIVED": "Vous ne pouvez pas créer d'enregistrements d'un étudiant archivé. Déchargez-le d'abord",
 		"DAY_UNARCHIVE": "Êtes-vous sûr de vouloir désarchiver cet enregistrement ?",
+		"DAY_UNARCHIVED_OK": "Enregistrement désarchivé avec succès",
 		"DAY_UNARCHIVE_2": "Si c'est le cas, il réapparaîtra dans la liste des enregistrements.",
-		"DAY_UNARCHIVE_OK": "Enregistrement désarchivé avec succès",
 		"DAY_UPDATE_OK": "Enregistrement modifié",
 		"FORGOT_PASSWORD": "Vous avez oublié votre mot de passe ?",
 		"FORGOT_PASSWORD_EMAIL": "Vérifiez votre courrier électronique. Nous vous avons envoyé un courriel contenant les instructions pour réinitialiser votre mot de passe.",
